# gpu_science_day_julia

./: Manifest.toml  Project.toml  README.md  pyproject.toml  talk.ipynb  talk_with_outputs.ipynb  talk_with_outputs.slides.html  test_script.jl  test_script_2.jl
